# parasol

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  package-lock.json  package.json  renovate-config.js  renovate.json  run_all_problems.sh  run_one_instance.sh  rust-toolchain.toml  solver.msc.template
.githooks/: pre-commit
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  deps-audit.yaml  deps-sec-audit.yml
benchmark/: aggregate_results.py  benchmark.py  discover.py
benchmark/results/: benchmark_results.csv
benchmark/schedules/: best-static.csv  cpsat8.csv
command-line-ai/: knn.py  requirements.txt  svm.py
compilation-priorities/: challenge2025.csv  challenge2025.txt
minizinc/: Preferences.json
minizinc/challenge/: Dockerfile  README.md
minizinc/solvers/: choco.msc.template  framework.msc.template  izplus.msc.template  parasol.msc.template  pumpkin.msc.template
scripts/release/: prepare  publish
src/: ai.rs  args.rs  backup_solvers.rs  config.rs  fzn_to_features.rs  input.rs  insert_objective.rs  is_cancelled.rs  logging.rs  main.rs  minizinc_runner.rs  model_parser.rs  mzn_to_fzn.rs  process_tree.rs  scheduler.rs  signal_handler.rs  solver_discovery.rs  solver_manager.rs  solver_output.rs  solvers.rs  static_schedule.rs  sunny.rs
src/ai/: commandline.rs
src/args/: common.rs  mod.rs
static-schedules/: best-static.csv  cpsat8.csv  huub-cpsat.csv  huub.csv  java-solvers.csv  scip.csv  yuck-best-static-no-picat.csv
tests/: end_to_end.rs
tests-manual/: run_all_problems.sh  run_one_instance.sh
(+14 files in other folders)
