[package]
name = "parasol"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "wrap_help"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
ctrlc = { version = "=3.5.2", features = ["termination"]}
futures = "=0.3.32"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "signal"] }
regex = "=1.12.3"
sysinfo = "=0.39.1"
tempfile = "=3.27.0"
itertools = "=0.14.0"
tokio-util = { version = "=0.7.18", features = ["rt"] }
thiserror = "=2.0.18"
async-tempfile = "=0.7.0"
uuid = { version = "=1.23.1", features = ["v4", "fast-rng"] }
anyhow = "=1.0.102"
nix =  { version="=0.31.3", features = ["sched", "signal"]}
core_affinity = "=0.8.3"
directories = "=6.0.0"

[dev-dependencies]
predicates = "=3.1.4"
assert_cmd = "=2.2.1"


